# atSecilPi

./: .gitignore  LICENSE  README.md  reboot_conf.sh
bluetooth-command/: Cargo.toml  bt_command_relay.py
bluetooth-command/src/: client.rs  constants.rs  main.rs  server.rs  utils.rs
ethernet/: setup-ethernet-conf.sh
gps/: app_gps.py
libs/: config_env.md  data.txt  gps.py  gps_app.py  gps_display.py  gps_simulator.py  lib-notes.md  libgps.py  libnetwork.py  log.py  requirements.txt  scan-port.py
reseau-adhoc/: app_adhoc.py  e1-param-reseau.sh  rsf-adhoc.md  setup-manual-adhoc.sh  setup-nm-adhoc.sh
reseau-adhoc/GPS-display/: display.py
reseau-adhoc/TCP-app/: client.py  inst.sh  server.py
reseau-adhoc/TCP-app/received_inst/: do_else.sh  do_something_else.sh  doo.sh  project.json
reseau-adhoc/TCP-execute/: client.py  do_something.sh  server.py
reseau-adhoc/TCP-execute/executables_to_send/: do.sh
reseau-adhoc/TCP-execute/received_instructions/: do_something.sh
