[package]
name = "bluetooth-command"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3.31"
clap = { version = "4.5.32", features = ["derive"] }
uuid = "1.16.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
